<resources>
    <string name="app_name">AgentPro</string>
    <string name="content_description_media">agent_image</string>
    <string name="agent_name">AgentName</string>
    <string name="agent_role">AgentRole</string>
    <string name="agent_description">AgentDescription</string>
    <string name="agent_abilities">Abilities</string>
    <string name="fab_desc">ability_fab</string>
    <string name="ability_tv_fab">AbilityFab</string>
    <string name="bg_img">bg_img</string>
    <string name="controller_role">Controller</string>
    <string name="duelist_role">Duelist</string>
    <string name="initiator_role">Initiator</string>
    <string name="sentinel_role">Sentinel</string>
    <string name="brim_name">Brimstone</string>
    <string name="brim_desc">Joining from the USA, Brimstone\'s orbital arsenal ensures his squad always has the advantage. His ability to deliver utility precisely and from a distance make him an unmatched boots-on-the-ground commander.</string>
    <string name="brim_ability_basic1_name">Stim Beacon</string>
    <string name="brim_ability_basic1_desc">INSTANTLY toss down a stim beacon. Upon landing, it creates a field that grants players a Combat Stim and a Speed Boost.</string>
    <string name="brim_ability_basic2_name">Incendiary</string>
    <string name="brim_ability_basic2_desc">EQUIP an incendiary grenade launcher. FIRE to launch a grenade that detonates as it comes to a rest on the floor, creating a lingering fire zone that damages players within the zone.</string>
    <string name="brim_ability_signature_name">Sky Smoke</string>
    <string name="brim_ability_signature_desc">EQUIP a tactical map. FIRE to set locations where Brimstone\'s smoke clouds will land. ALTERNATE FIRE to confirm, launching long-lasting smoke clouds that block vision in the selected area.</string>
    <string name="brim_ability_ultimate_name">Orbital Strike</string>
    <string name="brim_ability_ultimate_desc">EQUIP a tactical map. FIRE to launch a lingering orbital strike laser at the selected location, dealing high damage-over-time to players caught in the selected area.</string>
    <string name="viper_name">Viper</string>
    <string name="viper_desc">The American chemist, Viper deploys an array of poisonous chemical devices to control the battlefield and choke the enemy\'s vision. If the toxins don\'t kill her prey, her mind games surely will.</string>
    <string name="viper_ability_basic1_name">Snake Bite</string>
    <string name="viper_ability_basic1_desc">EQUIP a chemical launcher. FIRE to launch a canister that shatters upon hitting the floor, creating a lingering chemical zone that damages and applies Vulnerable.</string>
    <string name="viper_ability_basic2_name">Poison Cloud</string>
    <string name="viper_ability_basic2_desc">EQUIP a gas emitter. FIRE to throw the emitter that perpetually remains throughout the round. ALT FIRE to lob. RE-USE the ability to create a toxic gas cloud at the cost of fuel. This ability can be RE-USED more than once and can be picked up to be REDEPLOYED.</string>
    <string name="viper_ability_signature_name">Toxic Screen</string>
    <string name="viper_ability_signature_desc">EQUIP a gas emitter launcher that penetrates terrain. FIRE to deploy a long line of gas emitters. RE-USE the ability to create a tall wall of toxic gas at the cost of fuel. This ability can be RE-USED more than once.</string>
    <string name="viper_ability_ultimate_name">Viper\'s Pit</string>
    <string name="viper_ability_ultimate_desc">EQUIP a chemical sprayer. FIRE to spray a chemical cloud in all directions around Viper, creating a large cloud that Nearsights players and Decays the health of enemies inside of it. HOLD the ability key to disperse the cloud early.</string>
    <string name="omen_name">Omen</string>
    <string name="omen_desc">A phantom of a memory, Omen hunts in the shadows. He renders enemies blind, teleports across the field, then lets paranoia take hold as his foe scrambles to learn where he might strike next.</string>
    <string name="omen_ability_basic1_name">Shrouded Step</string>
    <string name="omen_ability_basic1_desc">EQUIP a shrouded step ability and see its range indicator. FIRE to begin a brief channel, then teleport to the marked location.</string>
    <string name="omen_ability_basic2_name">Paranoia</string>
    <string name="omen_ability_basic2_desc">EQUIP a blinding orb. FIRE to throw it forward, briefly Nearsighting and Deafening all players it touches. This projectile can pass straight through walls.</string>
    <string name="omen_ability_signature_name">Dark Cover</string>
    <string name="omen_ability_signature_desc">EQUIP a shadow orb, entering a phased world to place and target the orbs. PRESS the ability key to throw the shadow orb to the marked location, creating a long-lasting shadow sphere that blocks vision. HOLD FIRE while targeting to move the marker further away. HOLD ALT FIRE while targeting to move the marker closer. PRESS RELOAD to toggle normal targeting view.</string>
    <string name="omen_ability_ultimate_name">From the Shadows</string>
    <string name="omen_ability_ultimate_desc">EQUIP a tactical map. FIRE to begin teleporting to the selected location. While teleporting, Omen will appear as a Shade that can be destroyed by an enemy to cancel his teleport, or PRESS EQUIP for Omen to cancel his teleport.</string>
    <string name="killjoy_name">Killjoy</string>
    <string name="killjoy_desc">The genius of Germany, Killjoy effortlessly secures key battlefield positions with her arsenal of inventions. If their damage doesn\'t take her enemies out, the debuff her robots provide will make short work of them.</string>
    <string name="killjoy_ability_basic1_name">Nanoswarm</string>
    <string name="killjoy_ability_basic1_desc">EQUIP a Nanoswarm grenade. FIRE to throw the grenade. Upon landing, the Nanoswarm goes covert. ALT FIRE to lob. ACTIVATE the Nanoswarm to deploy a damaging swarm of nanobots.</string>
    <string name="killjoy_ability_basic2_name">Alarmbot</string>
    <string name="killjoy_ability_basic2_desc">EQUIP a covert Alarmbot. FIRE to deploy a bot that hunts down enemies that get in range. After reaching its target, the bot explodes and applies Vulnerable to enemies in the area. HOLD EQUIP to recall a deployed bot.</string>
    <string name="killjoy_ability_signature_name">Turret</string>
    <string name="killjoy_ability_signature_desc">EQUIP a Turret. FIRE to deploy a turret that fires at enemies in a 180 degree cone. ALT FIRE to swap turret direction. HOLD EQUIP to recall the deployed turret.</string>
    <string name="killjoy_ability_ultimate_name">Lockdown</string>
    <string name="killjoy_ability_ultimate_desc">EQUIP the Lockdown device. FIRE to deploy the device. After a long windup, the device Detains all enemies caught in the radius. The device can be destroyed by enemies.</string>
    <string name="cypher_name">Cypher</string>
    <string name="cypher_desc">The Moroccan information broker, Cypher is a one-man surveillance network who keeps tabs on the enemy’s every move. No secret is safe. No maneuver goes unseen. Cypher is always watching.</string>
    <string name="cypher_ability_basic1_name">Trampwire</string>
    <string name="cypher_ability_basic1_desc">EQUIP a trapwire. FIRE to place a destructible and covert tripwire at the targeted location, creating a line that spans between the placed location and the wall opposite. Enemy players who cross a tripwire will be Tethered, Revealed, and Concussed after a short period if they do not destroy the device in time. This ability can be picked up to be REDEPLOYED.</string>
    <string name="cypher_ability_basic2_name">Cyber Cage</string>
    <string name="cypher_ability_basic2_desc">INSTANTLY toss the cyber cage in front of Cypher. ACTIVATE to create a zone that blocks vision and plays an audio cue when enemies pass through it.</string>
    <string name="cypher_ability_signature_name">Spycam</string>
    <string name="cypher_ability_signature_desc">EQUIP a spycam. FIRE to place the spycam at the targeted location. RE-USE this ability to take control of the camera\'s view. While in control of the camera, FIRE to shoot a marking dart. This dart will Reveal the location of any player struck by the dart. This ability can be picked up to be REDEPLOYED.</string>
    <string name="cypher_ability_ultimate_name">Neural Theft</string>
    <string name="cypher_ability_ultimate_desc">INSTANTLY use on a targeted dead enemy to download information on their team. After a brief delay, the location of all living enemy players will be Revealed twice.</string>
    <string name="sova_name">Sova</string>
    <string name="sova_desc">Born from the eternal winter of Russia\'s tundra, Sova tracks, finds, and eliminates enemies with ruthless efficiency and precision. His custom bow and incredible scouting abilities ensure that even if you run, you cannot hide.</string>
    <string name="sova_ability_basic1_name">Owl Drone</string>
    <string name="sova_ability_basic1_desc">EQUIP an owl drone. FIRE to deploy and take control of movement of the drone. While in control of the drone, FIRE to shoot a marking dart. This dart will Reveal the location of any player struck by the dart. Enemies can destroy the Owl Drone.</string>
    <string name="sova_ability_basic2_name">Shock Bolt</string>
    <string name="sova_ability_basic2_desc">EQUIP a bow with a shock bolt. FIRE to send the explosive bolt forward, detonating upon collision and damaging players nearby. HOLD FIRE to extend the range of the projectile. ALT FIRE to add up to two bounces to this arrow.</string>
    <string name="sova_ability_signature_name">Recon Bolt</string>
    <string name="sova_ability_signature_desc">EQUIP a bow with a recon bolt. FIRE to send the recon bolt forward, activating upon collision and Revealing the location of nearby enemies caught in the line of sight of the bolt. Enemies can destroy this bolt. HOLD FIRE to extend the range of the projectile. ALT FIRE to add up to two bounces to this arrow.</string>
    <string name="sova_ability_ultimate_name">Hunter\'s Fury</string>
    <string name="sova_ability_ultimate_desc">EQUIP a bow with three long-range, wall-piercing energy blasts. FIRE to release an energy blast in a line in front of Sova, dealing damage and Revealing the location of enemies caught in the line. This ability can be RE-USED up to two more times while the ability timer is active.</string>
    <string name="sage_name">Sage</string>
    <string name="sage_desc">The bastion of China, Sage creates safety for herself and her team wherever she goes. Able to revive fallen friends and stave off aggressive pushes, she provides a calm center to a hellish fight.</string>
    <string name="sage_ability_basic1_name">Barrier Orb</string>
    <string name="sage_ability_basic1_desc">EQUIP a barrier orb. FIRE places a wall that fortifies after a few seconds. ALT FIRE rotates the targeter.</string>
    <string name="sage_ability_basic2_name">Slow Orb</string>
    <string name="sage_ability_basic2_desc">EQUIP a slowing orb. FIRE to throw a slowing orb forward that detonates upon landing, creating a lingering field that Slows players caught inside of it.</string>
    <string name="sage_ability_signature_name">Healing Orb</string>
    <string name="sage_ability_signature_desc">EQUIP a healing orb. FIRE with your crosshairs over a damaged ally to activate a Heal-Over-Time on them. ALT FIRE while Sage is damaged to activate a self Heal-Over-Time.</string>
    <string name="sage_ability_ultimate_name">Resurrection</string>
    <string name="sage_ability_ultimate_desc">EQUIP a resurrection ability. FIRE with your crosshairs placed over a dead ally to begin resurrecting them. After a brief channel, the ally will be brought back to life with full health.</string>
    <string name="phoenix_name">Phoenix</string>
</resources>