<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/agentCardView"
    style="@style/Widget.AgentPro.CardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnSecondary"
    app:cardElevation="8dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/agentImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:background="@drawable/bg_card"
                android:contentDescription="@string/content_description_media"
                android:paddingBottom="32dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/brimstone_artwork_full" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:baselineAligned="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                app:layout_constraintBottom_toBottomOf="@id/agentImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/agentImageView"
                app:layout_constraintTop_toBottomOf="@+id/agentImageView">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fabBasic1"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/bg_fab"
                        android:contentDescription="@string/fab_desc"
                        android:padding="8dp"
                        app:srcCompat="@drawable/baseline_local_fire_department_24"
                        app:tint="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/abilityBasic1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ability_tv_fab"
                        android:textAppearance="@style/TextAppearance.AgentPro.LabelMedium" />

                    <TextView
                        android:id="@+id/abilityBasic1Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ability_tv_fab"
                        android:textAppearance="@style/TextAppearance.AgentPro.LabelMedium"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fabBasic2"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/bg_fab"
                        android:contentDescription="@string/fab_desc"
                        android:padding="8dp"
                        app:srcCompat="@drawable/baseline_local_fire_department_24"
                        app:tint="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/abilityBasic2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ability_tv_fab"
                        android:textAppearance="@style/TextAppearance.AgentPro.LabelMedium" />

                    <TextView
                        android:id="@+id/abilityBasic2Description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ability_tv_fab"
                        android:textAppearance="@style/TextAppearance.AgentPro.LabelMedium"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fabSignature"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/bg_fab"
                        android:contentDescription="@string/fab_desc"
                        android:padding="8dp"
                        android:textAppearance="@style/TextAppearance.AgentPro.LabelMedium"
                        app:srcCompat="@drawable/baseline_local_fire_department_24"
                        app:tint="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/abilitySignature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ability_tv_fab"
                        android:textAppearance="@style/TextAppearance.AgentPro.LabelMedium" />

                    <TextView
                        android:id="@+id/abilitySignatureDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ability_tv_fab"
                        android:textAppearance="@style/TextAppearance.AgentPro.LabelMedium"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/fabUltimate"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/bg_fab"
                        android:contentDescription="@string/fab_desc"
                        android:padding="8dp"
                        app:srcCompat="@drawable/baseline_local_fire_department_24"
                        app:tint="?attr/colorPrimary" />

                    <TextView
                        android:id="@+id/abilityUltimate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ability_tv_fab"
                        android:textAppearance="@style/TextAppearance.AgentPro.LabelMedium" />

                    <TextView
                        android:id="@+id/abilityUltimateDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/ability_tv_fab"
                        android:textAppearance="@style/TextAppearance.AgentPro.LabelMedium"
                        android:visibility="gone" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/agentNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/agent_name"
                android:textAppearance="@style/TextAppearance.AgentPro.HeadlineLarge"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- Buttons -->

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->

            <TextView
                android:id="@+id/agentRoleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/agent_role"
                android:textAppearance="@style/TextAppearance.AgentPro.HeadlineMedium"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/agentDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/agent_description"
                android:textAppearance="@style/TextAppearance.AgentPro.BodyLarge"
                android:textColor="?android:attr/textColorSecondary" />


        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:id="@+id/bgImageView"
        android:contentDescription="@string/bg_img" />


</com.google.android.material.card.MaterialCardView>